ctpgo/cctptrade_api_darwin.h

// 创建TraderApi
DLL_EXPORT_C_DECL void WPCTP tRelease(void *api);
// 初始化
DLL_EXPORT_C_DECL void WPCTP tInit(void *api);
// 等待接口线程结束运行
DLL_EXPORT_C_DECL int WPCTP tJoin(void *api);
// 注册前置机网络地址
DLL_EXPORT_C_DECL void WPCTP tRegisterFront(void *api, char *pszFrontAddress);
// @remark RegisterNameServer优先于RegisterFront
DLL_EXPORT_C_DECL void WPCTP tRegisterNameServer(void *api, char *pszNsAddress);
// 注册名字服务器用户信息
DLL_EXPORT_C_DECL void WPCTP tRegisterFensUserInfo(void *api, struct CThostFtdcFensUserInfoField *pFensUserInfo);
// 注册回调接口
DLL_EXPORT_C_DECL void WPCTP tRegisterSpi(void *api, void *pSpi);
// 订阅私有流。
DLL_EXPORT_C_DECL void WPCTP tSubscribePrivateTopic(void *api, int nResumeType);
// 订阅公共流。
DLL_EXPORT_C_DECL void WPCTP tSubscribePublicTopic(void *api, int nResumeType);
// 客户端认证请求
DLL_EXPORT_C_DECL int WPCTP tReqAuthenticate(void *api, struct CThostFtdcReqAuthenticateField *pReqAuthenticateField, int nRequestID);
// 注册用户终端信息，用于中继服务器多连接模式
DLL_EXPORT_C_DECL int WPCTP tRegisterUserSystemInfo(void *api, struct CThostFtdcUserSystemInfoField *pUserSystemInfo);
// 上报用户终端信息，用于中继服务器操作员登录模式
DLL_EXPORT_C_DECL int WPCTP tSubmitUserSystemInfo(void *api, struct CThostFtdcUserSystemInfoField *pUserSystemInfo);
// 用户登录请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLogin(void *api, struct CThostFtdcReqUserLoginField *pReqUserLoginField, int nRequestID, TThostFtdcSystemInfoLenType length, TThostFtdcClientSystemInfoType systemInfo);
// 登出请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLogout(void *api, struct CThostFtdcUserLogoutField *pUserLogout, int nRequestID);
// 用户口令更新请求
DLL_EXPORT_C_DECL int WPCTP tReqUserPasswordUpdate(void *api, struct CThostFtdcUserPasswordUpdateField *pUserPasswordUpdate, int nRequestID);
// 资金账户口令更新请求
DLL_EXPORT_C_DECL int WPCTP tReqTradingAccountPasswordUpdate(void *api, struct CThostFtdcTradingAccountPasswordUpdateField *pTradingAccountPasswordUpdate, int nRequestID);
// 查询用户当前支持的认证模式
DLL_EXPORT_C_DECL int WPCTP tReqUserAuthMethod(void *api, struct CThostFtdcReqUserAuthMethodField *pReqUserAuthMethod, int nRequestID);
// 用户发出获取图形验证码请求
DLL_EXPORT_C_DECL int WPCTP tReqGenUserCaptcha(void *api, struct CThostFtdcReqGenUserCaptchaField *pReqGenUserCaptcha, int nRequestID);
// 用户发出获取短信验证码请求
DLL_EXPORT_C_DECL int WPCTP tReqGenUserText(void *api, struct CThostFtdcReqGenUserTextField *pReqGenUserText, int nRequestID);
// 用户发出带有图片验证码的登陆请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLoginWithCaptcha(void *api, struct CThostFtdcReqUserLoginWithCaptchaField *pReqUserLoginWithCaptcha, int nRequestID);
// 用户发出带有短信验证码的登陆请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLoginWithText(void *api, struct CThostFtdcReqUserLoginWithTextField *pReqUserLoginWithText, int nRequestID);
// 用户发出带有动态口令的登陆请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLoginWithOTP(void *api, struct CThostFtdcReqUserLoginWithOTPField *pReqUserLoginWithOTP, int nRequestID);
// 报单录入请求
DLL_EXPORT_C_DECL int WPCTP tReqOrderInsert(void *api, struct CThostFtdcInputOrderField *pInputOrder, int nRequestID);
// 预埋单录入请求
DLL_EXPORT_C_DECL int WPCTP tReqParkedOrderInsert(void *api, struct CThostFtdcParkedOrderField *pParkedOrder, int nRequestID);
// 预埋撤单录入请求
DLL_EXPORT_C_DECL int WPCTP tReqParkedOrderAction(void *api, struct CThostFtdcParkedOrderActionField *pParkedOrderAction, int nRequestID);
// 报单操作请求
DLL_EXPORT_C_DECL int WPCTP tReqOrderAction(void *api, struct CThostFtdcInputOrderActionField *pInputOrderAction, int nRequestID);
// 查询最大报单数量请求
DLL_EXPORT_C_DECL int WPCTP tReqQryMaxOrderVolume(void *api, struct CThostFtdcQryMaxOrderVolumeField *pQryMaxOrderVolume, int nRequestID);
// 投资者结算结果确认
DLL_EXPORT_C_DECL int WPCTP tReqSettlementInfoConfirm(void *api, struct CThostFtdcSettlementInfoConfirmField *pSettlementInfoConfirm, int nRequestID);
// 请求删除预埋单
DLL_EXPORT_C_DECL int WPCTP tReqRemoveParkedOrder(void *api, struct CThostFtdcRemoveParkedOrderField *pRemoveParkedOrder, int nRequestID);
// 请求删除预埋撤单
DLL_EXPORT_C_DECL int WPCTP tReqRemoveParkedOrderAction(void *api, struct CThostFtdcRemoveParkedOrderActionField *pRemoveParkedOrderAction, int nRequestID);
// 执行宣告录入请求
DLL_EXPORT_C_DECL int WPCTP tReqExecOrderInsert(void *api, struct CThostFtdcInputExecOrderField *pInputExecOrder, int nRequestID);
// 执行宣告操作请求
DLL_EXPORT_C_DECL int WPCTP tReqExecOrderAction(void *api, struct CThostFtdcInputExecOrderActionField *pInputExecOrderAction, int nRequestID);
// 询价录入请求
DLL_EXPORT_C_DECL int WPCTP tReqForQuoteInsert(void *api, struct CThostFtdcInputForQuoteField *pInputForQuote, int nRequestID);
// 报价录入请求
DLL_EXPORT_C_DECL int WPCTP tReqQuoteInsert(void *api, struct CThostFtdcInputQuoteField *pInputQuote, int nRequestID);
// 报价操作请求
DLL_EXPORT_C_DECL int WPCTP tReqQuoteAction(void *api, struct CThostFtdcInputQuoteActionField *pInputQuoteAction, int nRequestID);
// 批量报单操作请求
DLL_EXPORT_C_DECL int WPCTP tReqBatchOrderAction(void *api, struct CThostFtdcInputBatchOrderActionField *pInputBatchOrderAction, int nRequestID);
// 期权自对冲录入请求
DLL_EXPORT_C_DECL int WPCTP tReqOptionSelfCloseInsert(void *api, struct CThostFtdcInputOptionSelfCloseField *pInputOptionSelfClose, int nRequestID);
// 期权自对冲操作请求
DLL_EXPORT_C_DECL int WPCTP tReqOptionSelfCloseAction(void *api, struct CThostFtdcInputOptionSelfCloseActionField *pInputOptionSelfCloseAction, int nRequestID);
// 申请组合录入请求
DLL_EXPORT_C_DECL int WPCTP tReqCombActionInsert(void *api, struct CThostFtdcInputCombActionField *pInputCombAction, int nRequestID);
// 请求查询报单
DLL_EXPORT_C_DECL int WPCTP tReqQryOrder(void *api, struct CThostFtdcQryOrderField *pQryOrder, int nRequestID);
// 请求查询成交
DLL_EXPORT_C_DECL int WPCTP tReqQryTrade(void *api, struct CThostFtdcQryTradeField *pQryTrade, int nRequestID);
// 请求查询投资者持仓
DLL_EXPORT_C_DECL int WPCTP tReqQryInvestorPosition(void *api, struct CThostFtdcQryInvestorPositionField *pQryInvestorPosition, int nRequestID);
// 请求查询资金账户
DLL_EXPORT_C_DECL int WPCTP tReqQryTradingAccount(void *api, struct CThostFtdcQryTradingAccountField *pQryTradingAccount, int nRequestID);
// 请求查询投资者
DLL_EXPORT_C_DECL int WPCTP tReqQryInvestor(void *api, struct CThostFtdcQryInvestorField *pQryInvestor, int nRequestID);
// 请求查询交易编码
DLL_EXPORT_C_DECL int WPCTP tReqQryTradingCode(void *api, struct CThostFtdcQryTradingCodeField *pQryTradingCode, int nRequestID);
// 请求查询合约保证金率
DLL_EXPORT_C_DECL int WPCTP tReqQryInstrumentMarginRate(void *api, struct CThostFtdcQryInstrumentMarginRateField *pQryInstrumentMarginRate, int nRequestID);
// 请求查询合约手续费率
DLL_EXPORT_C_DECL int WPCTP tReqQryInstrumentCommissionRate(void *api, struct CThostFtdcQryInstrumentCommissionRateField *pQryInstrumentCommissionRate, int nRequestID);
// 请求查询交易所
DLL_EXPORT_C_DECL int WPCTP tReqQryExchange(void *api, struct CThostFtdcQryExchangeField *pQryExchange, int nRequestID);
// 请求查询产品
DLL_EXPORT_C_DECL int WPCTP tReqQryProduct(void *api, struct CThostFtdcQryProductField *pQryProduct, int nRequestID);
// 请求查询合约
DLL_EXPORT_C_DECL int WPCTP tReqQryInstrument(void *api, struct CThostFtdcQryInstrumentField *pQryInstrument, int nRequestID);
// 请求查询行情
DLL_EXPORT_C_DECL int WPCTP tReqQryDepthMarketData(void *api, struct CThostFtdcQryDepthMarketDataField *pQryDepthMarketData, int nRequestID);
// 请求查询交易员报盘机
DLL_EXPORT_C_DECL int WPCTP tReqQryTraderOffer(void *api, struct CThostFtdcQryTraderOfferField *pQryTraderOffer, int nRequestID);
// 请求查询投资者结算结果
DLL_EXPORT_C_DECL int WPCTP tReqQrySettlementInfo(void *api, struct CThostFtdcQrySettlementInfoField *pQrySettlementInfo, int nRequestID);
// 请求查询转帐银行
DLL_EXPORT_C_DECL int WPCTP tReqQryTransferBank(void *api, struct CThostFtdcQryTransferBankField *pQryTransferBank, int nRequestID);
// 请求查询投资者持仓明细
DLL_EXPORT_C_DECL int WPCTP tReqQryInvestorPositionDetail(void *api, struct CThostFtdcQryInvestorPositionDetailField *pQryInvestorPositionDetail, int nRequestID);
// 请求查询客户通知
DLL_EXPORT_C_DECL int WPCTP tReqQryNotice(void *api, struct CThostFtdcQryNoticeField *pQryNotice, int nRequestID);
// 请求查询结算信息确认
DLL_EXPORT_C_DECL int WPCTP tReqQrySettlementInfoConfirm(void *api, struct CThostFtdcQrySettlementInfoConfirmField *pQrySettlementInfoConfirm, int nRequestID);
// 请求查询投资者持仓明细
DLL_EXPORT_C_DECL int WPCTP tReqQryInvestorPositionCombineDetail(void *api, struct CThostFtdcQryInvestorPositionCombineDetailField *pQryInvestorPositionCombineDetail, int nRequestID);
// 请求查询保证金监管系统经纪公司资金账户密钥
DLL_EXPORT_C_DECL int WPCTP tReqQryCFMMCTradingAccountKey(void *api, struct CThostFtdcQryCFMMCTradingAccountKeyField *pQryCFMMCTradingAccountKey, int nRequestID);
// 请求查询仓单折抵信息
DLL_EXPORT_C_DECL int WPCTP tReqQryEWarrantOffset(void *api, struct CThostFtdcQryEWarrantOffsetField *pQryEWarrantOffset, int nRequestID);
// 请求查询投资者品种/跨品种保证金
DLL_EXPORT_C_DECL int WPCTP tReqQryInvestorProductGroupMargin(void *api, struct CThostFtdcQryInvestorProductGroupMarginField *pQryInvestorProductGroupMargin, int nRequestID);
// 请求查询交易所保证金率
DLL_EXPORT_C_DECL int WPCTP tReqQryExchangeMarginRate(void *api, struct CThostFtdcQryExchangeMarginRateField *pQryExchangeMarginRate, int nRequestID);
// 请求查询交易所调整保证金率
DLL_EXPORT_C_DECL int WPCTP tReqQryExchangeMarginRateAdjust(void *api, struct CThostFtdcQryExchangeMarginRateAdjustField *pQryExchangeMarginRateAdjust, int nRequestID);
// 请求查询汇率
DLL_EXPORT_C_DECL int WPCTP tReqQryExchangeRate(void *api, struct CThostFtdcQryExchangeRateField *pQryExchangeRate, int nRequestID);
// 请求查询二级代理操作员银期权限
DLL_EXPORT_C_DECL int WPCTP tReqQrySecAgentACIDMap(void *api, struct CThostFtdcQrySecAgentACIDMapField *pQrySecAgentACIDMap, int nRequestID);
// 请求查询产品报价汇率
DLL_EXPORT_C_DECL int WPCTP tReqQryProductExchRate(void *api, struct CThostFtdcQryProductExchRateField *pQryProductExchRate, int nRequestID);
// 请求查询产品组
DLL_EXPORT_C_DECL int WPCTP tReqQryProductGroup(void *api, struct CThostFtdcQryProductGroupField *pQryProductGroup, int nRequestID);
// 请求查询做市商合约手续费率
DLL_EXPORT_C_DECL int WPCTP tReqQryMMInstrumentCommissionRate(void *api, struct CThostFtdcQryMMInstrumentCommissionRateField *pQryMMInstrumentCommissionRate, int nRequestID);
// 请求查询做市商期权合约手续费
DLL_EXPORT_C_DECL int WPCTP tReqQryMMOptionInstrCommRate(void *api, struct CThostFtdcQryMMOptionInstrCommRateField *pQryMMOptionInstrCommRate, int nRequestID);
// 请求查询报单手续费
DLL_EXPORT_C_DECL int WPCTP tReqQryInstrumentOrderCommRate(void *api, struct CThostFtdcQryInstrumentOrderCommRateField *pQryInstrumentOrderCommRate, int nRequestID);
// 请求查询资金账户
DLL_EXPORT_C_DECL int WPCTP tReqQrySecAgentTradingAccount(void *api, struct CThostFtdcQryTradingAccountField *pQryTradingAccount, int nRequestID);
// 请求查询二级代理商资金校验模式
DLL_EXPORT_C_DECL int WPCTP tReqQrySecAgentCheckMode(void *api, struct CThostFtdcQrySecAgentCheckModeField *pQrySecAgentCheckMode, int nRequestID);
// 请求查询二级代理商信息
DLL_EXPORT_C_DECL int WPCTP tReqQrySecAgentTradeInfo(void *api, struct CThostFtdcQrySecAgentTradeInfoField *pQrySecAgentTradeInfo, int nRequestID);
// 请求查询期权交易成本
DLL_EXPORT_C_DECL int WPCTP tReqQryOptionInstrTradeCost(void *api, struct CThostFtdcQryOptionInstrTradeCostField *pQryOptionInstrTradeCost, int nRequestID);
// 请求查询期权合约手续费
DLL_EXPORT_C_DECL int WPCTP tReqQryOptionInstrCommRate(void *api, struct CThostFtdcQryOptionInstrCommRateField *pQryOptionInstrCommRate, int nRequestID);
// 请求查询执行宣告
DLL_EXPORT_C_DECL int WPCTP tReqQryExecOrder(void *api, struct CThostFtdcQryExecOrderField *pQryExecOrder, int nRequestID);
// 请求查询询价
DLL_EXPORT_C_DECL int WPCTP tReqQryForQuote(void *api, struct CThostFtdcQryForQuoteField *pQryForQuote, int nRequestID);
// 请求查询报价
DLL_EXPORT_C_DECL int WPCTP tReqQryQuote(void *api, struct CThostFtdcQryQuoteField *pQryQuote, int nRequestID);