pyctp/macos/ctptrade_api.py


        #################### 请求函数 #######################
        # 创建TraderApi
        self.h.tRelease.argtypes = [c_void_p]
        self.h.tRelease.restype = c_void_p
        # 初始化
        self.h.tInit.argtypes = [c_void_p]
        self.h.tInit.restype = c_void_p
        # 等待接口线程结束运行
        self.h.tJoin.argtypes = [c_void_p]
        self.h.tJoin.restype = c_void_p
        # 注册前置机网络地址
        self.h.tRegisterFront.argtypes = [c_void_p, c_void_p]
        self.h.tRegisterFront.restype = c_void_p
        # @remark RegisterNameServer优先于RegisterFront
        self.h.tRegisterNameServer.argtypes = [c_void_p, c_void_p]
        self.h.tRegisterNameServer.restype = c_void_p
        # 注册名字服务器用户信息
        self.h.tRegisterFensUserInfo.argtypes = [c_void_p, c_void_p]
        self.h.tRegisterFensUserInfo.restype = c_void_p
        # 注册回调接口
        self.h.tRegisterSpi.argtypes = [c_void_p, c_void_p]
        self.h.tRegisterSpi.restype = c_void_p
        # 订阅私有流。
        self.h.tSubscribePrivateTopic.argtypes = [c_void_p, c_void_p]
        self.h.tSubscribePrivateTopic.restype = c_void_p
        # 订阅公共流。
        self.h.tSubscribePublicTopic.argtypes = [c_void_p, c_void_p]
        self.h.tSubscribePublicTopic.restype = c_void_p
        # 客户端认证请求
        self.h.tReqAuthenticate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqAuthenticate.restype = c_void_p
        # 注册用户终端信息，用于中继服务器多连接模式
        self.h.tRegisterUserSystemInfo.argtypes = [c_void_p, c_void_p]
        self.h.tRegisterUserSystemInfo.restype = c_void_p
        # 上报用户终端信息，用于中继服务器操作员登录模式
        self.h.tSubmitUserSystemInfo.argtypes = [c_void_p, c_void_p]
        self.h.tSubmitUserSystemInfo.restype = c_void_p
        # 用户登录请求
        self.h.tReqUserLogin.argtypes = [c_void_p, c_void_p, c_int32, c_void_p, c_void_p]
        self.h.tReqUserLogin.restype = c_void_p
        # 登出请求
        self.h.tReqUserLogout.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserLogout.restype = c_void_p
        # 用户口令更新请求
        self.h.tReqUserPasswordUpdate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserPasswordUpdate.restype = c_void_p
        # 资金账户口令更新请求
        self.h.tReqTradingAccountPasswordUpdate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqTradingAccountPasswordUpdate.restype = c_void_p
        # 查询用户当前支持的认证模式
        self.h.tReqUserAuthMethod.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserAuthMethod.restype = c_void_p
        # 用户发出获取图形验证码请求
        self.h.tReqGenUserCaptcha.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqGenUserCaptcha.restype = c_void_p
        # 用户发出获取短信验证码请求
        self.h.tReqGenUserText.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqGenUserText.restype = c_void_p
        # 用户发出带有图片验证码的登陆请求
        self.h.tReqUserLoginWithCaptcha.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserLoginWithCaptcha.restype = c_void_p
        # 用户发出带有短信验证码的登陆请求
        self.h.tReqUserLoginWithText.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserLoginWithText.restype = c_void_p
        # 用户发出带有动态口令的登陆请求
        self.h.tReqUserLoginWithOTP.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqUserLoginWithOTP.restype = c_void_p
        # 报单录入请求
        self.h.tReqOrderInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqOrderInsert.restype = c_void_p
        # 预埋单录入请求
        self.h.tReqParkedOrderInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqParkedOrderInsert.restype = c_void_p
        # 预埋撤单录入请求
        self.h.tReqParkedOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqParkedOrderAction.restype = c_void_p
        # 报单操作请求
        self.h.tReqOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqOrderAction.restype = c_void_p
        # 查询最大报单数量请求
        self.h.tReqQryMaxOrderVolume.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryMaxOrderVolume.restype = c_void_p
        # 投资者结算结果确认
        self.h.tReqSettlementInfoConfirm.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqSettlementInfoConfirm.restype = c_void_p
        # 请求删除预埋单
        self.h.tReqRemoveParkedOrder.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqRemoveParkedOrder.restype = c_void_p
        # 请求删除预埋撤单
        self.h.tReqRemoveParkedOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqRemoveParkedOrderAction.restype = c_void_p
        # 执行宣告录入请求
        self.h.tReqExecOrderInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqExecOrderInsert.restype = c_void_p
        # 执行宣告操作请求
        self.h.tReqExecOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqExecOrderAction.restype = c_void_p
        # 询价录入请求
        self.h.tReqForQuoteInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqForQuoteInsert.restype = c_void_p
        # 报价录入请求
        self.h.tReqQuoteInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQuoteInsert.restype = c_void_p
        # 报价操作请求
        self.h.tReqQuoteAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQuoteAction.restype = c_void_p
        # 批量报单操作请求
        self.h.tReqBatchOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqBatchOrderAction.restype = c_void_p
        # 期权自对冲录入请求
        self.h.tReqOptionSelfCloseInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqOptionSelfCloseInsert.restype = c_void_p
        # 期权自对冲操作请求
        self.h.tReqOptionSelfCloseAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqOptionSelfCloseAction.restype = c_void_p
        # 申请组合录入请求
        self.h.tReqCombActionInsert.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqCombActionInsert.restype = c_void_p
        # 请求查询报单
        self.h.tReqQryOrder.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryOrder.restype = c_void_p
        # 请求查询成交
        self.h.tReqQryTrade.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTrade.restype = c_void_p
        # 请求查询投资者持仓
        self.h.tReqQryInvestorPosition.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorPosition.restype = c_void_p
        # 请求查询资金账户
        self.h.tReqQryTradingAccount.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTradingAccount.restype = c_void_p
        # 请求查询投资者
        self.h.tReqQryInvestor.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestor.restype = c_void_p
        # 请求查询交易编码
        self.h.tReqQryTradingCode.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTradingCode.restype = c_void_p
        # 请求查询合约保证金率
        self.h.tReqQryInstrumentMarginRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInstrumentMarginRate.restype = c_void_p
        # 请求查询合约手续费率
        self.h.tReqQryInstrumentCommissionRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInstrumentCommissionRate.restype = c_void_p
        # 请求查询交易所
        self.h.tReqQryExchange.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryExchange.restype = c_void_p
        # 请求查询产品
        self.h.tReqQryProduct.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryProduct.restype = c_void_p
        # 请求查询合约
        self.h.tReqQryInstrument.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInstrument.restype = c_void_p
        # 请求查询行情
        self.h.tReqQryDepthMarketData.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryDepthMarketData.restype = c_void_p
        # 请求查询交易员报盘机
        self.h.tReqQryTraderOffer.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTraderOffer.restype = c_void_p
        # 请求查询投资者结算结果
        self.h.tReqQrySettlementInfo.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySettlementInfo.restype = c_void_p
        # 请求查询转帐银行
        self.h.tReqQryTransferBank.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTransferBank.restype = c_void_p
        # 请求查询投资者持仓明细
        self.h.tReqQryInvestorPositionDetail.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorPositionDetail.restype = c_void_p
        # 请求查询客户通知
        self.h.tReqQryNotice.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryNotice.restype = c_void_p
        # 请求查询结算信息确认
        self.h.tReqQrySettlementInfoConfirm.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySettlementInfoConfirm.restype = c_void_p
        # 请求查询投资者持仓明细
        self.h.tReqQryInvestorPositionCombineDetail.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorPositionCombineDetail.restype = c_void_p
        # 请求查询保证金监管系统经纪公司资金账户密钥
        self.h.tReqQryCFMMCTradingAccountKey.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryCFMMCTradingAccountKey.restype = c_void_p
        # 请求查询仓单折抵信息
        self.h.tReqQryEWarrantOffset.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryEWarrantOffset.restype = c_void_p
        # 请求查询投资者品种/跨品种保证金
        self.h.tReqQryInvestorProductGroupMargin.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorProductGroupMargin.restype = c_void_p
        # 请求查询交易所保证金率
        self.h.tReqQryExchangeMarginRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryExchangeMarginRate.restype = c_void_p
        # 请求查询交易所调整保证金率
        self.h.tReqQryExchangeMarginRateAdjust.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryExchangeMarginRateAdjust.restype = c_void_p
        # 请求查询汇率
        self.h.tReqQryExchangeRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryExchangeRate.restype = c_void_p
        # 请求查询二级代理操作员银期权限
        self.h.tReqQrySecAgentACIDMap.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySecAgentACIDMap.restype = c_void_p
        # 请求查询产品报价汇率
        self.h.tReqQryProductExchRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryProductExchRate.restype = c_void_p
        # 请求查询产品组
        self.h.tReqQryProductGroup.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryProductGroup.restype = c_void_p
        # 请求查询做市商合约手续费率
        self.h.tReqQryMMInstrumentCommissionRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryMMInstrumentCommissionRate.restype = c_void_p
        # 请求查询做市商期权合约手续费
        self.h.tReqQryMMOptionInstrCommRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryMMOptionInstrCommRate.restype = c_void_p
        # 请求查询报单手续费
        self.h.tReqQryInstrumentOrderCommRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInstrumentOrderCommRate.restype = c_void_p
        # 请求查询资金账户
        self.h.tReqQrySecAgentTradingAccount.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySecAgentTradingAccount.restype = c_void_p
        # 请求查询二级代理商资金校验模式
        self.h.tReqQrySecAgentCheckMode.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySecAgentCheckMode.restype = c_void_p
        # 请求查询二级代理商信息
        self.h.tReqQrySecAgentTradeInfo.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySecAgentTradeInfo.restype = c_void_p
        # 请求查询期权交易成本
        self.h.tReqQryOptionInstrTradeCost.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryOptionInstrTradeCost.restype = c_void_p
        # 请求查询期权合约手续费
        self.h.tReqQryOptionInstrCommRate.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryOptionInstrCommRate.restype = c_void_p
        # 请求查询执行宣告
        self.h.tReqQryExecOrder.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryExecOrder.restype = c_void_p
        # 请求查询询价
        self.h.tReqQryForQuote.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryForQuote.restype = c_void_p
        # 请求查询报价
        self.h.tReqQryQuote.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryQuote.restype = c_void_p
        # 请求查询期权自对冲
